syntax = "proto3";

package com.example.grpcapi;

option java_multiple_files = true;

service UserService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string fullname = 1;
  string username = 2;
  string password = 3;
  string address = 4;
  int32 age = 5;
}

message RegisterResponse {
  string message = 1;
  int64 userId = 2;
}
